# screen_brightness

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.agents/skills/changelog-from-tags/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: dart.yml  flutter_plugin.yml  screen_brightness.yml  screen_brightness_platform_interface.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/view/: blank_page.dart  controller_page.dart  home_page.dart  route_aware_page.dart
example/test/: widget_test.dart
ios/Classes/: SwiftScreenBrightnessPlugin.swift
ios/Classes/StreamHandler/: CurrentBrightnessChangeStreamHandler.swift
lib/: screen_brightness.dart
lib/src/: brightness.dart
lib/src/constant/: brightness.dart  method_name.dart  (+2 more)
screen_brightness/: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
screen_brightness/android/: settings.gradle
screen_brightness/example/: README.md  pubspec.yaml
screen_brightness/ios/: screen_brightness.podspec
screen_brightness/lib/: screen_brightness.dart  screen_brightness_method_channel.dart  screen_brightness_platform_interface.dart
screen_brightness/test/: screen_brightness_test.dart
screen_brightness_android/: CHANGELOG.md  README.md  pubspec.yaml
screen_brightness_android/android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
screen_brightness_android/example/: README.md  pubspec.yaml
screen_brightness_ios/: CHANGELOG.md  README.md  pubspec.yaml
screen_brightness_ios/example/: README.md  pubspec.yaml
screen_brightness_ios/ios/: screen_brightness_ios.podspec
screen_brightness_linux/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
screen_brightness_linux/example/: README.md  pubspec.yaml
screen_brightness_linux/linux/: CMakeLists.txt  screen_brightness_linux_plugin.cc
screen_brightness_macos/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
screen_brightness_macos/example/: README.md  pubspec.yaml
screen_brightness_macos/macos/: screen_brightness_macos.podspec
screen_brightness_ohos/: CHANGELOG.md  README.md  pubspec.yaml
screen_brightness_ohos/example/: .metadata  pubspec.yaml
screen_brightness_ohos/ohos/: .gitignore  oh-package.json5
screen_brightness_platform_interface/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
screen_brightness_platform_interface/lib/: method_channel_screen_brightness.dart  screen_brightness_platform_interface.dart
screen_brightness_platform_interface/test/: screen_brightness_platform_interface_test.dart
screen_brightness_windows/: CHANGELOG.md  README.md  pubspec.yaml
screen_brightness_windows/example/: README.md  pubspec.yaml
screen_brightness_windows/windows/: CMakeLists.txt  screen_brightness_windows_plugin.cpp  screen_brightness_windows_plugin_c_api.cpp
screen_brightness_windows/windows/include/screen_brightness_windows/: application_screen_brightness_change_stream_handler.h  base_stream_handler.h  current_brightness_change_stream_handler.h  screen_brightness_changed_stream_handler.h  screen_brightness_windows_plugin.h  screen_brightness_windows_plugin_c_api.h
screen_brightness_windows/windows/src/: application_screen_brightness_change_stream_handler.cpp  current_brightness_change_stream_handler.cpp  screen_brightness_changed_stream_handler.cpp  screen_brightness_windows_plugin.cpp
test/: screen_brightness_test.dart
(+103 files in other folders)
